--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:name="com.android.sidehelp.DonateActivity"
             android:label="@string/title_activity_donate" >
         </activity>
+        <activity
+            android:name="com.android.sidehelp.CommunityHomePage"
+            android:label="@string/title_activity_community_home_page" >
+        </activity>
     </application>
 
 </manifest>
